--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "ng build --configuration=production --base-href=/ocp-agent-helper/",
+    "build:prod": "ng build --configuration production --base-href https://stephennimmo.github.io/ocp-agent-helper/",
+    "test:headless": "ng test --watch=false --browsers=ChromeHeadless",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
